# 60-CARguru-Description

./: README.md  carguru.sh
00-CommonCANguruALL/src/: CANguruDefs.cpp  CANguruDefs.h
00-CommonCANguruBridge/src/: serial.h
00-CommonCANguruDecoder/src/: OTA_include.cpp  UMS3.h  espnow.h
05-Show_IP-Adress - TinyS3/: platformio.ini
05-Show_IP-Adress - TinyS3/include/: used_modul.h
05-Show_IP-Adress - TinyS3/src/: main.cpp
10 CARguru-Bridge Raspberry Pi/: CMakeLists.txt
10 CARguru-Bridge Raspberry Pi/css/: style.css
10 CARguru-Bridge Raspberry Pi/include/: classdefs.h  clock.h  definitions.h
10 CARguru-Bridge Raspberry Pi/src/: car.cpp  clock.cpp  configure.cpp  frame.cpp  main.cpp  mainwindow.cpp  play.cpp
20 CARguru-Bridge ESP32/: platformio.ini  workspace.code-workspace
20 CARguru-Bridge ESP32/include/: CANguru.h  CANguruDefs.h  espnow.h  serial2raspi.h  utils.h
20 CARguru-Bridge ESP32/src/: espnow.cpp  main.cpp  serial2raspi.cpp
30 CARguru-Bridge ESP32-S3/: platformio.ini
30 CARguru-Bridge ESP32-S3/include/: Sweeper.h
30 CARguru-Bridge ESP32-S3/src/: Sweeper.cpp  main.cpp
